customized my app 2

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -11,3 +11,8 @@
 /* Apply custom highlight */
 ::-moz-selection{ .custom-highlight; }
 ::selection { .custom-highlight; }
+
+h1{
+    color: red;
+    text-align: center;
+}
