customized my app final

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,7 @@
 
 
 {% block main %}
-<h1>Welcome to my fisrt Heroku App!</h1>
+<h1>Welcome to my first Heroku App!</h1>
+<p>All my app does for now is show an image, bummer</p><br>
+<img class="proc" src="http://www.intellisparx.com/images/San-Diego-Web-Application.jpg" alt="Web Dev Process"">
 {% endblock %}
