--- a/static/css/main.less
+++ b/static/css/main.less
@@ -16,3 +16,16 @@ h1{
     color: red;
     text-align: center;
 }
+
+body {
+    background-color: lightblue;
+}
+
+p{
+    margin-left:20px;
+}
+
+img.proc {
+    display: block;
+    margin: 50px auto;
+}
